k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postmortems-reports-service
  namespace: default
  labels:
    app: postmortems-reports
  #annotations:
  #  service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  #  service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
  #  service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: ClusterIP #LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: postmortems-reports
