k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: postmortem-reports-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - bot.dev.daveops.sh
    secretName: postmortem-tls
  rules:
  - host: bot.dev.daveops.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postmortems-reports-service
            port:
              number: 80
